# esp32_lora_driver

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  LiotLr2021.c  NOTICE  README.en.md  README.md  README.zh-CN.md  idf_component.yml
include/: LiotLr2021.h
modem_hal/: CMakeLists.txt  smtc_modem_hal.c  smtc_modem_hal.h  smtc_modem_hal_dbg_trace.h
rac/: CMakeLists.txt  smtc_rac.c  smtc_rac.h  smtc_rac_flrc.c  smtc_rac_fsk.c  smtc_rac_lbt.c  smtc_rac_lbt.h  smtc_rac_local_func.h  smtc_rac_lora.c  smtc_rac_lrfhss.c
rac_api/: smtc_rac_api.h  smtc_rac_log.h  smtc_rac_version.h
radio_drivers/: CMakeLists.txt
radio_drivers/lr20xx_driver/inc/: lr20xx_driver_version.h  lr20xx_radio_bluetooth_le.h  lr20xx_radio_bpsk_types.h  lr20xx_radio_common.h  lr20xx_radio_flrc.h  lr20xx_radio_flrc_types.h  lr20xx_radio_fsk_types.h  lr20xx_radio_lora.h  lr20xx_radio_lora_types.h  lr20xx_radio_lr_fhss.h  lr20xx_radio_lr_fhss_types.h  lr20xx_radio_ook_types.h  lr20xx_radio_oqpsk_15_4.h  lr20xx_radio_z_wave.h  lr20xx_rttof.h  lr20xx_status.h  lr20xx_system.h  lr20xx_workarounds.h
radio_drivers/lr20xx_driver/src/: lr20xx_radio_bluetooth_le.c  lr20xx_radio_fsk.c  lr20xx_radio_lora.c  lr20xx_radio_lr_fhss.c  lr20xx_radio_ook.c  lr20xx_system.c  lr20xx_workarounds.c
radio_hal/: CMakeLists.txt  radio_utilities.c  radio_utilities.h
radio_hal/lr11xx_hal/: lr11xx_hal.c  lr11xx_pa_pwr_cfg.h
radio_hal/lr20xx_hal/: lr20xx_hal.c  lr20xx_hal.h  lr20xx_pa_pwr_cfg.h
radio_hal/sx126x_hal/: sx126x_hal.c
radio_planner/: CMakeLists.txt  duty_cycle.c  radio_planner.c  radio_planner.h  radio_planner_hook_id_defs.h  radio_planner_types.h
ral/: ral.h  ral_defs.h  ral_drv.h
ral/lr11xx_ral/: ral_lr11xx.c  ral_lr11xx.h  ral_lr11xx_bsp.c
ral/lr20xx_ral/: ral_lr20xx.c  ral_lr20xx.h  ral_lr20xx_bsp.c  ral_lr20xx_bsp.h  ral_lr20xx_bsp_lrmam36_fann4.c  ral_lr20xx_bsp_lrmwp35_fann4.c
ral/sx126x_ral/: ral_sx126x.c  ral_sx126x.h  ral_sx126x_bsp.c
ralf/: ralf_defs.h
ralf/lr20xx_ralf/: ralf_lr20xx.c
